<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="orientation|keyboardHidden"
    android:gravity="top|start"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:background="#363636"
        android:gravity="center_vertical|end"
        android:text="@string/zero"
        android:textColor="@android:color/white"
        android:textSize="54sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ac"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change2"
                android:text="AC"

                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change2"
                android:text="◀"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/lb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change"
                android:shadowColor="#00943C3C"
                android:text="("
                android:textSize="28sp" />

            <Button
                android:id="@+id/rb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change"
                android:text=")"
                android:textSize="28sp" />

            <Button
                android:id="@+id/per"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change"
                android:text="％"
                android:textSize="30sp"
                android:typeface="serif" />

            <Button
                android:id="@+id/div"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change2"
                android:text="÷"
                android:textColor="@android:color/white"
                android:textSize="42sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/c7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change3"
                android:text="7"
                android:textSize="36sp" />

            <Button
                android:id="@+id/c8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change3"
                android:text="8"
                android:textSize="36sp" />

            <Button
                android:id="@+id/c9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change3"
                android:text="9"
                android:textSize="36sp" />

            <Button
                android:id="@+id/mul"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change2"
                android:text="×"
                android:textColor="@android:color/white"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/c4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change3"
                android:text="4"
                android:textSize="36sp" />

            <Button
                android:id="@+id/c5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change3"
                android:text="5"
                android:textSize="36sp" />

            <Button
                android:id="@+id/c6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change3"
                android:text="6"
                android:textSize="36sp" />

            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change2"
                android:text="－"
                android:textColor="@android:color/white"
                android:textSize="64sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/c1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change3"
                android:text="1"
                android:textSize="36sp" />

            <Button
                android:id="@+id/c2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change3"
                android:text="2"
                android:textSize="36sp" />

            <Button
                android:id="@+id/c3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change3"
                android:text="3"
                android:textSize="36sp" />

            <Button
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change2"
                android:text="＋"
                android:textColor="@android:color/white"
                android:textSize="42sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/c0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_change3"
                android:text="0"
                android:textSize="36sp" />

            <Button
                android:id="@+id/point"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change3"
                android:text="."
                android:textSize="36sp" />

            <Button
                android:id="@+id/equal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_change2"
                android:text="="
                android:textColor="@android:color/white"
                android:textSize="36sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

