...
            android:layout_weight="2.5"
            android:background="#363636"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="#363636"
            android:gravity="bottom|end"
            android:text="0"
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#363636"
            android:gravity="end"
            android:textColor="@android:color/white"
...
            android:text="◀"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/lac"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_change2"
            android:text="AC"
            android:textColor="@android:color/white"
...
            android:background="@drawable/button_change3"
            android:text="÷"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_change2"
            android:text="Res"
            android:textAllCaps="false"
...
